Image filtering process

--- a/OpenCv/practice.ipynb
+++ b/OpenCv/practice.ipynb
@@ -69,7 +69,15 @@
    "id": "ea7f1ad4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## user se file location puchna hai \n",
+    "# option \n",
+    "# line \n",
+    "# circle\n",
+    "# rectangle\n",
+    "# text\n",
+    "## kya isse save bhi krna hai pucho "
+   ]
   }
  ],
  "metadata": {
